--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
-xgboost
-lightgbm
-os
-pathlib
-pandas
+# Machine learning
+numpy==1.26.4
+pandas==2.2.2
+scikit-learn==1.5.0
+tensorflow==2.11.1
+torch==2.3.1
+xgboost==2.1.0
+lightgbm==4.4.0 
+
+# Plots
+seaborn==0.13.2
+matplotlib==3.9.0
