--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
     },
     "variables": {
       "features" :[],
-      "variables_to_shift": ["elec_prices"],
+      "variables_to_shift": ["elec_prices","daily_natural_gas_prices","daily_oil_price","rain_d","temp_d","wddir_d","wdsp_d","rain_c","temp_c","wddir_c","wdsp_c","rain_g","temp_g","wdsp_g","wddir_g"],
       "target_variable": "elec_prices",
       "window_lookback(shift)": [1, 100],
       "horizon": [1,24]
@@ -72,18 +72,6 @@
         {
           "file_name": "data_final_2019_2020.csv",
           "date_format": "%Y-%m-%d %H:%M"
-        },
-        {
-          "file_name": "Europe_Brent_Spot_Price_FOB.csv",
-          "date_format": "%m/%d/%Y"
-        },
-        {
-          "file_name": "Henry_Hub_Natural_Gas_Spot_Price.csv",
-          "date_format": "%m/%d/%Y"
-        },
-        {
-          "file_name": "hly2275.csv",
-          "date_format": "%d-%b-%Y %H:%M"
         }
       ]
     }
