--- a/config.json
+++ b/config.json
@@ -71,7 +71,7 @@
       "files": [
         {
           "file_name": "data_final_2019_2020.csv",
-          "date_format": "%Y-%m-%d %H:%M"
+          "date_format": "%Y-%m-%d %H:%M:%S"
         }
       ]
     }
