--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@
 numpy==1.26.4
 pandas==2.2.2
 scikit-learn==1.5.0
-tensorflow==2.11.1
 torch==2.3.1
 xgboost==2.1.0
 lightgbm==4.4.0 
@@ -10,3 +9,7 @@ lightgbm==4.4.0
 # Plots
 seaborn==0.13.2
 matplotlib==3.9.0
+
+# Tools
+tabulate==0.9.0
+openpyxl==3.1.5
