--- a/config.json
+++ b/config.json
@@ -1,4 +1,13 @@
 {
+    "bdd":{
+      "postgre" : {
+        "dbname" : "mtu_elec",
+        "user" : "root",
+        "password" : "root",
+        "host" : "localhost",
+        "port" : "5432"
+      }
+    },
     "mode":0,
     "date": {
       "start_date": "2019-01-01",
