--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,10 @@ dmypy.json
 .pytype/
 /data/modelsave
 /data/results
+best_models_per_output.csv
+model_results.csv
+model_results.xlsx
+data/results/model_results.xlsx
+/data/results
+/data/results
+data/results/model_results_nn.xlsx
