--- a/config.json
+++ b/config.json
@@ -22,7 +22,8 @@
       "variables_to_shift": ["elec_prices"],
       "target_variable": "elec_prices",
       "window_lookback(shift)": [1, 100],
-      "horizon": [1,24]
+      "horizon": [1,24],
+      "hour": 21
     },
     "transformations": {
       "hour": "hour",
@@ -32,7 +33,16 @@
       "month" : "month"
       },
     "model" : [
-      "BayesianRidge"
+      "BayesianRidge",
+      "PassiveAggressiveRegressor",
+      "SGDRegressor",
+      "XGBRegressor",
+      "LinearRegression",
+      "Ridge",
+      "Lasso",
+      "ElasticNet",
+      "SVR",
+      "MLPRegressor"
     ],
     "file_imports": {
       "files": [
