--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,6 @@ jobs:
 
       - name: Run Main.py
         run: |
-          docker-compose exec -T main_app python Main.py
+          docker-compose exec -T main_app python3 Main.py
 
 
