--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,12 +36,12 @@ services:
     entrypoint: >
       bash -c "
       # Create and activate the virtual environment
-      python3 -m venv /AI_MTU/ml;
-      source /AI_MTU/ml/bin/activate;
+      python3 -m venv ml;
+      source ml/bin/activate;
       # Install requirements
-      pip install -r /AI_MTU/requirements.txt;
+      pip install -r requirements.txt;
       # Run the Python script
-      python /AI_MTU/Main.py;
+      python Main.py;
       # Keep the container running
       tail -f /dev/null
       "
