--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,22 +29,18 @@ services:
     image: ubuntu:latest
     container_name: main_app_container
     volumes:
-      - .:/app  # Montez le répertoire courant de l'hôte dans /app du conteneur
+      - .:/app  # Mount the current directory from the host into /app in the container
     depends_on:
       - postgres
       - grafana
     entrypoint: >
       bash -c "
-      # Mettre à jour les paquets et installer les dépendances
+      set -e;
       apt-get update && apt-get install -y python3 python3-pip python3-venv;
-      # Créer et activer l'environnement virtuel
       python3 -m venv ml;
       source ml/bin/activate;
-      # Installer les dépendances
       pip install -r /app/requirements.txt;
-      # Exécuter le script Python
       python /app/Main.py;
-      # Garder le conteneur en cours d'exécution
       tail -f /dev/null
       "
     environment:
