--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,8 @@ services:
     command: >
       bash -c "
       python3 -m venv ml; 
-      source ml/bin/activate; 
+      source ml/bin/activate;
+      pip install --upgrade pip
       pip install --no-cache-dir -r requirements.txt; 
       python Main.py; 
       tail -f /dev/null
