--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,10 @@ jobs:
     runs-on: self-hosted
 
     steps:
+      - name: Clean repository
+        run: |
+          sudo rm -rf /home/ubuntu/actions-runner/_work/AI_MTU/AI_MTU/*
+          
       - name: Checkout code
         uses: actions/checkout@v3
 
