--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,8 +35,7 @@ jobs:
           done
           
       - name: Run Main.py
-        run: |
-          docker-compose exec -T main_app python3 /app/Main.py
+        run: docker-compose exec -T main_app bash -c "source ml/bin/activate && python3 Main.py"
 
 
 
