--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,10 @@ services:
       - postgres
       - grafana
     working_dir: /app  # Définit le répertoire de travail
+    command: >
+      bash -c "
+      tail -f /dev/null
+      "
     environment:
       - PYTHONUNBUFFERED=1
 
