--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,9 +43,13 @@ jobs:
             pip install --no-cache-dir -r /app/requirements.txt
           "
 
-      - name: Run Main.py
+      - name: Install Python Dependencies and Run Main.py
         run: |
-          docker-compose exec main_app_container bash -c "
+          docker-compose exec -T main_app bash -c "
+            python3 -m venv ml && \
+            source ml/bin/activate && \
+            pip install --upgrade pip && \
+            pip install --no-cache-dir -r /app/requirements.txt && \
             source ml/bin/activate && \
             python3 /app/Main.py
           "
