--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,5 +29,5 @@ jobs:
     - name: Deploy documentation
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.Docs }}
         publish_dir: ./docs/_build/html
