--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
         "dbname" : "mtu_elec",
         "user" : "root",
         "password" : "root",
-        "host" : "postgres",
+        "host" : "localhost",
         "port" : "5432"
     },
     "api":{
@@ -23,7 +23,7 @@
       "target_variable": "elec_prices",
       "window_lookback(shift)": [1, 100],
       "horizon": [1,24],
-      "hour": 21
+      "hour": 22
     },
     "transformations": {
       "hour": "hour",
@@ -33,16 +33,7 @@
       "month" : "month"
       },
     "model" : [
-      "BayesianRidge",
-      "PassiveAggressiveRegressor",
-      "SGDRegressor",
-      "XGBRegressor",
-      "LinearRegression",
-      "Ridge",
-      "Lasso",
-      "ElasticNet",
-      "SVR",
-      "MLPRegressor"
+      "BayesianRidge"
     ],
     "file_imports": {
       "files": [
