--- a/config.json
+++ b/config.json
@@ -33,7 +33,7 @@
       "month" : "month"
       },
     "model" : [
-      "BayesianRidge"
+      "LSTM_Model"
     ],
     "file_imports": {
       "files": [
